Refatoraçao e adiçao de banco de dados
