# src/routes/categories.routes.ts
@@ -1,19 +1,20 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import { createCategoryController } from '../module/cars/useCases/createCategory';
-import { importCategoryController } from '../module/cars/useCases/importCategory';
-import { listCategoriesController } from '../module/cars/useCases/listCategories';
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
 
-const upload = multer({
-  dest: "./tmp"
-})
+const upload = multer({ dest: "./tmp" });
 
-categoriesRoutes.post("/", (request, response) => createCategoryController.handle(request, response));
-categoriesRoutes.get("/", (request, response) => listCategoriesController.handle(request, response));
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => importCategoryController.handle(request, response));
+categoriesRoutes.post("/", createCategoryController.handle);
+categoriesRoutes.get("/", listCategoriesController.handle);
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle);
 
 export { categoriesRoutes };
